--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <p>¿Quieres ser mi novia?</p>
+        <p>¿Quieres ser mi novia oficialmente?</p>
         <button id="yesBtn">Si</button>
         <button id="noBtn">No</button>
     </div>
