--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <p>¿Quieres ser mi novia oficialmente?</p>
-        <button id="yesBtn">Si</button>
+        <button id="yesBtn">Sí</button>
         <button id="noBtn">No</button>
     </div>
     <script src="index.js"></script>
